--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -18,7 +18,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-
     <EditText
         android:id="@+id/dateEditText"
         android:layout_width="match_parent"
@@ -63,6 +62,7 @@
         android:inputType="datetime"
         android:layout_height="40dp"
         android:paddingEnd="5dp"
+        android:paddingStart="5dp"
         android:textColorHint="@color/editTexts"
         android:layout_below="@+id/endsTextView"
         android:layout_alignStart="@id/endsTextView"
@@ -79,6 +79,7 @@
         android:inputType="datetime"
         android:layout_height="40dp"
         android:paddingEnd="5dp"
+        android:paddingStart="5dp"
         android:layout_below="@id/startsTextView"
         android:layout_alignEnd="@id/startsTextView"
         android:layout_alignStart="@id/startsTextView"
@@ -113,10 +114,25 @@
         android:textSize="@dimen/font_size_edittext"
         android:drawableRight="@drawable/ic_users_24dp"
         android:paddingEnd="5dp"
+        android:gravity="center"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_below="@+id/nbrPeopleTextView"
         android:layout_alignStart="@+id/nbrPeopleTextView"
         android:layout_alignEnd="@id/nbrPeopleTextView"/>
+
+    <Button
+        android:id="@+id/createButton"
+        android:layout_width="match_parent"
+        android:layout_below="@id/nbrPeopleEditText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="60dp"
+        android:layout_height="55dp"
+        android:background="@drawable/btn_create"
+        android:text="@string/btn_create_create_fragment" />
 
 
 </RelativeLayout>
