--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="nav_header">#636ea6</color>
     <color name="color_navigation_list_background">#d8d8d9</color>
     <color name="color_selector_navigation_item">#1b1b1b</color>
-    <color name="et_shape">#d37986cb</color>
+    <color name="et_shape">#72799b</color>
+    <color name="btn_create">#7b8aae</color>
 </resources>
