--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="et_shape">#72799b</color>
     <color name="btn_create">#7b8aae</color>
     <color name="icon_tint">#616161</color>
+    <color name="snackbar_warning">#e64545</color>
 </resources>
