--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -3,18 +3,25 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingStart="30dp"
-    android:paddingEnd="30dp"
-    android:layout_marginTop="10dp"
-    android:paddingTop="10dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:theme="@style/Theme.App.Base"
     tools:context="com.example.emile1.findaparty.Activity.CreateFragment">
 
+    <TextView
+        android:id="@+id/banner"
+        android:text="DATE AND TIME"
+        android:textColor="@android:color/white"
+        android:background="@color/banner"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:paddingStart="10dp"
+        android:layout_height="40dp" />
     <TextView
         android:id="@+id/dateTextView"
         android:text="@string/date_create_fragment"
         android:textColor="@color/textViews"
+        android:layout_below="@id/banner"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="30dp"
         android:textSize="@dimen/font_size_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -24,6 +31,8 @@
         android:layout_width="match_parent"
         android:inputType="date"
         android:layout_height="40dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         android:paddingEnd="5dp"
         android:paddingStart="10dp"
         android:layout_below="@+id/dateTextView"
@@ -40,7 +49,7 @@
         android:textColor="@color/textViews"
         android:textSize="@dimen/font_size_textview"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="60dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/dateEditText"
@@ -65,6 +74,7 @@
         android:paddingEnd="5dp"
         android:paddingStart="5dp"
         android:gravity="center"
+        android:layout_marginEnd="30dp"
         android:textColorHint="@color/editTexts"
         android:layout_below="@+id/endsTextView"
         android:layout_alignStart="@id/endsTextView"
@@ -132,7 +142,7 @@
         android:layout_below="@id/nbrPeopleEditText"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:layout_height="55dp"
         android:enabled="false"
