--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,15 +5,16 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_main"
+            android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/nav_home"/>
         <item
             android:id="@+id/nav_search"
             android:icon="@drawable/ic_search_black_24dp"
-            android:title="Search" />
+            android:title="@string/nav_search" />
         <item
             android:id="@+id/nav_create"
             android:icon="@drawable/ic_create_black_24dp"
-            android:title="Create" />
+            android:title="@string/nav_create" />
 
         <item
             android:id="@+id/nav_settings"
@@ -30,7 +31,7 @@
             <item
                 android:id="@+id/nav_logOut"
                 android:icon="@drawable/logout"
-                android:title="Log Out" />
+                android:title="@string/nav_logout" />
         </menu>
     </item>
 
