--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,11 +5,10 @@
     tools:context="com.example.emile1.findaparty.Activity.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/listview_home"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
-        android:layout_marginStart="100dp"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+    </ListView>
 
 </FrameLayout>
