--- a/app/src/main/res/layout/row_lan.xml
+++ b/app/src/main/res/layout/row_lan.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:paddingTop="10dp"
     android:paddingStart="30dp"
+    android:background="@android:color/white"
     android:paddingEnd="30dp">
 
     <TextView
