--- a/app/src/main/res/layout/fragment_recent.xml
+++ b/app/src/main/res/layout/fragment_recent.xml
@@ -9,6 +9,9 @@
         android:id="@+id/listview_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:divider="@android:color/transparent"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
