--- a/app/src/main/res/layout/row_lan.xml
+++ b/app/src/main/res/layout/row_lan.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:paddingTop="10dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
     android:paddingStart="30dp"
     android:background="@android:color/white"
     android:paddingEnd="30dp">
