--- a/app/src/main/res/layout/row_lan.xml
+++ b/app/src/main/res/layout/row_lan.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:paddingTop="5dp"
+    android:background="@drawable/listview_backgroundstate"
     android:paddingBottom="5dp"
     android:paddingStart="30dp"
-    android:background="@android:color/white"
     android:paddingEnd="30dp">
 
     <TextView
