--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,15 +1,48 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/buttonLoginColor"
-    android:layout_height="200dp"
-    tools:context="com.example.emile1.findaparty.Activity.SettingsFragment">
+    android:layout_height="match_parent">
+
+    <FrameLayout
+        android:id="@+id/frame"
+        android:layout_width="match_parent"
+        android:background="@color/buttonLoginColor"
+        android:layout_height="200dp"
+        tools:context="com.example.emile1.findaparty.Activity.SettingsFragment">
 
     <ImageView
+        android:id="@+id/profile_image"
         android:layout_width="65dp"
         android:layout_height="87dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
         android:background="@mipmap/ic_launcher"/>
+    </FrameLayout>
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/title_profile_textview"
+        android:layout_below="@id/frame"
+        android:text="Your profile"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/firstname_profile_textview"
+        android:layout_alignStart="@id/title_profile_textview"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="15dp"
+        android:text="FIRSTNAME"
+        android:layout_below="@id/title_profile_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <EditText
+        android:layout_below="@id/firstname_profile_textview"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="EMILE"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
+
