--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.emile1.findaparty.Activity.HomeFragment">
@@ -8,8 +10,7 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:background="?attr/colorPrimary"
+        style="@style/MyCustomTabLayout"
         android:elevation="6dp"
         android:minHeight="?attr/actionBarSize" />
 
@@ -18,4 +19,4 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
     </android.support.v4.view.ViewPager>
-</RelativeLayout>
+</LinearLayout>
