--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,5 @@
     <color name="banner">#1e2649</color>
     <color name="light_grey">#dfdede</color>
     <color name="pressed_state">#dadada</color>
-    <color name="tab_background">#303F9F</color>
+    <color name="tab_background">#3949ab</color>
 </resources>
