--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,8 +17,8 @@
     <color name="btn_create">#7b8aae</color>
     <color name="icon_tint">#616161</color>
     <color name="snackbar_warning">#e64545</color>
-    <color name="banner">#1e2649</color>
+    <color name="banner">#333c70</color>
     <color name="light_grey">#dfdede</color>
     <color name="pressed_state">#dadada</color>
-    <color name="tab_background">#3949ab</color>
+    <color name="tab_background">#9fa8da</color>
 </resources>
