--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -104,6 +104,22 @@
         android:inputType="textPostalAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/zipcode_profile_textview"
+        android:layout_below="@+id/address_profile_edittext"
+        android:layout_alignStart="@id/title_profile_textview"
+        android:text="ZIP CODE"
+        android:layout_marginStart="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/zipcode_profile_edittext"
+        android:layout_below="@id/zipcode_profile_textview"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:textSize="16sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
 
